# process-manager

./: .ai-factory.json  AGENTS.md  README.md  package-lock.json  package.json  skills-lock.json  vitest.config.ts
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  PLAN.md
.ai-factory/patches/: 2026-02-23-14.30.md  2026-02-23-16.30.md  2026-02-23-18.00.md  2026-02-26-cpu-memory-sort.md
.ai-factory/plans/: feature-lucide-icons.md
.github/workflows/: build.yml  lint.yml  release.yml  tests.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/collector/: mod.rs  sysinfo_collector.rs
src-tauri/src/commands/: actions.rs  mod.rs  processes.rs
src-tauri/src/models/: process.rs
src-tauri/src/updater/: mod.rs
src/lib/: types.ts
src/lib/api/: actions.ts  processes.ts
src/lib/components/: ConfirmModal.svelte  DetailPanel.svelte  FilterBar.svelte  ProcessTable.svelte  TitleBar.svelte  Toast.svelte
src/lib/components/ui/: Checkbox.svelte
src/lib/stores/: filterStore.svelte.ts  processStore.svelte.ts  settingsStore.svelte.ts
src/lib/utils/: format.ts  sort.test.ts  sort.ts
src/routes/: +page.svelte
