[package]
name = "process-manager"
version = "0.1.0"
description = "Cross-platform desktop process manager"
authors = []
edition = "2021"

[lib]
name = "process_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
parking_lot = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

